src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agent_Id__c</fullName>
        <label>Agent Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Number__c</fullName>
        <label>Contact Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Copy_address_from_permanent_Address__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Copy address from permanent Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counsellor_Name__c</fullName>
        <label>Counsellor Name</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amrith</fullName>
                </value>
                <value>
                    <fullName>Ayanthi</fullName>
                </value>
                <value>
                    <fullName>Harshi</fullName>
                </value>
                <value>
                    <fullName>Hasara</fullName>
                </value>
                <value>
                    <fullName>Nimesha</fullName>
                </value>
                <value>
                    <fullName>Nivetha</fullName>
                </value>
                <value>
                    <fullName>Sameera</fullName>
                </value>
                <value>
                    <fullName>Suresh</fullName>
                </value>
                <value>
                    <fullName>Varini</fullName>
                </value>
                <value>
                    <fullName>Virgini</fullName>
                </value>
                <value>
                    <fullName>Vishal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_Interested_In__c</fullName>
        <label>Country Interested In</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>UK</fullName>
                </value>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>Canada</fullName>
                </value>
                <value>
                    <fullName>New Zealand</fullName>
                </value>
                <value>
                    <fullName>switzerland</fullName>
                    <label>Switzerland</label>
                </value>
                <value>
                    <fullName>Malaysia</fullName>
                </value>
                <value>
                    <fullName>Singapore</fullName>
                </value>
                <value>
                    <fullName>Ireland</fullName>
                </value>
                <value>
                    <fullName>Grenada</fullName>
                </value>
                <value>
                    <fullName>Latvia</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Germany</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education_Qualification__c</fullName>
        <label>Education Qualification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Postgraduate</fullName>
                </value>
                <value>
                    <fullName>Undergraduate</fullName>
                </value>
                <value>
                    <fullName>HND</fullName>
                </value>
                <value>
                    <fullName>Diploma</fullName>
                </value>
                <value>
                    <fullName>Certificates</fullName>
                </value>
                <value>
                    <fullName>Foundation Course</fullName>
                </value>
                <value>
                    <fullName>A/L</fullName>
                </value>
                <value>
                    <fullName>O/L</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Emergency_Contact_Person_Name__c</fullName>
        <label>Emergency Contact Person Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Emergency_Email__c</fullName>
        <label>Emergency Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Telephone_No__c</fullName>
        <label>Home Telephone No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IELTS_Score__c</fullName>
        <label>IELTS Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_Field_of_Study__c</fullName>
        <label>Interested Field of Study</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Single</fullName>
                </value>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Divorced</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <label>Mobile</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Opt_out__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will be used to unsubscribe from CD Mass Emails. Please uncheck it manually if mass emails to be activated</inlineHelpText>
        <label>Unsubscribe from Mass Emails?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Other_Qualifications__c</fullName>
        <inlineHelpText>If you select other qualification, please specify the qualification</inlineHelpText>
        <label>Other Qualifications</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_University__c</fullName>
        <inlineHelpText>Enter Preferred University if it is not mentioned in the above list</inlineHelpText>
        <label>Other University</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermanentCountry__c</fullName>
        <label>Country</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PermanentPostalZipCode__c</fullName>
        <label>Postal/Zip Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PersonalCity__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preferred_University__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Preferred University</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>University__c.IsReady__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_with_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared with</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Students1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shared_with__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shared with</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Student_ID__c</fullName>
        <displayFormat>CDUK-{000000}</displayFormat>
        <label>CDUK Student ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Test_Date__c</fullName>
        <label>Test Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>What_is_your_first_language__c</fullName>
        <label>What is your first language ?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>All_Students_Sub_Agents</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Agent_Id__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agent_Id__c</field>
            <operation>contains</operation>
        </filters>
        <label>All Students - Sub Agents</label>
    </listViews>
    <listViews>
        <fullName>Hasara</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>Agent_Id__c</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.FIRST_NAME</field>
            <operation>equals</operation>
            <value>Hasara</value>
        </filters>
        <label>Hasara</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>Student_Selector_for_Mass_Emails</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Contact_Number__c</columns>
        <columns>Counsellor_Name__c</columns>
        <columns>Country_Interested_In__c</columns>
        <columns>Email__c</columns>
        <columns>Marital_Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>Student Selector for Mass Emails</label>
    </listViews>
    <listViews>
        <fullName>Students_from_Agents</fullName>
        <columns>Student_ID__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Last_Name__c</columns>
        <columns>Agent_Id__c</columns>
        <columns>Mobile__c</columns>
        <columns>Email__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agent_Id__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Students from Agents</label>
    </listViews>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Error_on_country_intrested_in</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL( Country_Interested_In__c )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Please enter value</errorMessage>
    </validationRules>
</CustomObject>